fix: adjust autofill text color for better visibility

--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -20,7 +20,6 @@
   border: 1px solid var(--color-dark-300);
   border-radius: 2px;
 
-
   &:hover {
     background: var(--color-dark-700);
   }
@@ -80,7 +79,6 @@
 
   background: transparent;
   border: none;
-
 }
 
 .showPassword {
@@ -99,4 +97,13 @@
   margin-bottom: 1px;
   line-height: 0;
   color: var(--color-danger-300);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+
+  -webkit-text-fill-color: var(--color-light-100) !important;
 }
